[package]
name = "msp430fr2433"
version = "0.2.0"
authors = ["Jinwoo Park <pmnxis@gmail.com>", "Ross Porter <rossporter506@gmail.com>"]
description = "Peripheral access crate for TI MSP430FR2433 microcontroller"
keywords = ["no-std", "msp430", "svd2rust", "embedded", "ti"]
repository = "https://github.com/pmnxis/msp430fr2433"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/msp430fr2433"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
msp430 = "0.4.1"
vcell = "0.1.3" 
portable-atomic = { version = "1.13", default-features = false }

[dependencies.msp430-rt]
optional = true
version = "0.4.1"

[features]
rt = ["msp430-rt/device"]

[package.metadata.docs.rs]
features = ["device"]
targets = ["msp430-none-elf"]
cargo-args = ["-Z", "build-std=core"]
